Fix some headers and actions not wrapping as expected

--- a/HealthCheck.Frontend/src/styles/core/layout.scss
+++ b/HealthCheck.Frontend/src/styles/core/layout.scss
@@ -8,10 +8,19 @@
 		padding-left: 20px;
 	}
 }
-
 .toolbar-offset {
 	margin-top: 56px;
 	@media (min-width: 960px) {
 		margin-top: 64px;
 	}
+}
+.header-layout {
+	display: flex;
+	flex-wrap: wrap;
+
+	&__title {
+		flex: 1;
+		min-width: 60%;
+	}
+	// &__actions {}
 }
